--- a/bibtex/daftar-pustaka.bib
+++ b/bibtex/daftar-pustaka.bib
@@ -1,3 +1,93 @@
+@article{pratama2021rancang,
+  title={RANCANG BANGUN APLIKASI PRESENSI DENGAN GLOBAL POTITIONING SYSTEM (GPS) BERBASIS ANDROID (Studi Kasus: PT. Perkebunan Nusantara VI Unit Usaha Kayu Aro)},
+  author={Pratama, Megi and Delianti, Vera Irma},
+  journal={INCARE, International Journal of Educational Resources},
+  volume={2},
+  number={2},
+  pages={141--154},
+  year={2021}
+}
+
+@article{hutahaean2019teknologi,
+  title={Teknologi Identifikasi Objek Berbasis Drone Menggunakan Algoritma Sift Citra Digital},
+  author={Hutahaean, Harvei Desmon and Waluyo, Bakti Dwi and Rais, Muhammad Amin},
+  journal={Jurnal Teknik Informatika UNIKA Santo Thomas},
+  volume={4},
+  number={2},
+  pages={202--207},
+  year={2019}
+}
+
+@article{Jumadi_Yupianti_Sartika_2021, title={PENGOLAHAN CITRA DIGITAL UNTUK IDENTIFIKASI OBJEK MENGGUNAKAN METODE HIERARCHICAL AGGLOMERATIVE CLUSTERING}, volume={10}, url={https://ejournal.undiksha.ac.id/index.php/JST/article/view/33636}, DOI={10.23887/jstundiksha.v10i2.33636}, abstractNote={Identifikasi objek (&amp;lt;em&amp;gt;object recognition) &amp;lt;/em&amp;gt;merupakan suatu bidang keillmuan dari komputer vision yang menggambarkan suatu objek yang didasarkan pada sifat utama dari objek tersebut. Identifikasi objek pada citra digital membutuhkan teknik dan metode yang mampu untuk mengekstraksi dan mengidentifikasi fitur-fitur yang terdapat pada citra digital, dimana komponen utamanya adalah warna sebagai dasar dari representasi objek pada citra digital. salah satu metode yang mampu menerapkan pengelompokan warna – warna objek pada citra digital sehingga dapat menjadi fitur utama dari objek pada citra digital adalah &amp;lt;em&amp;gt;Hierarchical&amp;lt;/em&amp;gt; &amp;lt;em&amp;gt;Agglomerative&amp;lt;/em&amp;gt; &amp;lt;em&amp;gt;Clustering.&amp;lt;/em&amp;gt; Analisa dilakukan secara bertahap yaitu analisis sistem dan analisis algoritma &amp;lt;em&amp;gt;agglomerative clustering&amp;lt;/em&amp;gt;. Proses analisa kemudian dilanjutkan dengan tahap perancangan yang mana dimulai dengan perancangan &amp;lt;em&amp;gt;use case diagram&amp;lt;/em&amp;gt; dan perancangan &amp;lt;em&amp;gt;flowchart. &amp;lt;/em&amp;gt;Akurasi dari algoritma &amp;lt;em&amp;gt;Hierarchical&amp;lt;/em&amp;gt; &amp;lt;em&amp;gt;Agglomerative&amp;lt;/em&amp;gt; &amp;lt;em&amp;gt;Clustering&amp;lt;/em&amp;gt; cukup baik khususnya pada objek yang memiliki warna khusus atau warna yang telah menjadi ciri dari objek tersebut namun dapat menghasilkan pengenalan yang buruk jika objek yang berbeda memiliki warna dominan yang sama}, number={2}, journal={JST (Jurnal Sains dan Teknologi)}, author={Jumadi, Juju and Yupianti, Yupianti and Sartika, Devi}, year={2021}, month={Nov.}, pages={148–156} }
+
+@article{widyaningsih2016identifikasi,
+  title={Identifikasi Kematangan Buah Apel Dengan Gray Level Co-Occurrence Matrix (GLCM)},
+  author={Widyaningsih, Maura},
+  journal={Jurnal Saintekom: Sains, Teknologi, Komputer dan Manajemen},
+  volume={6},
+  number={1},
+  pages={71--88},
+  year={2016}
+}
+
+@article{effendi2017identifikasi,
+  title={Identifikasi Jenis dan Mutu Teh Menggunakan Pengolahan Citra Digital dengan Metode Jaringan Syaraf Tiruan},
+  author={Effendi, Masud and Fitriyah, Fitriyah and Effendi, Usman},
+  journal={Teknotan: Jurnal Industri Teknologi Pertanian},
+  volume={11},
+  number={2},
+  pages={67--76},
+  year={2017}
+}
+
+@article{asri2018implementasi,
+  title={Implementasi objek detection dan tracking menggunakan deep learning untuk pengolahan citra digital},
+  author={Asri, Jefry Sunupurwa and Firmansyah, Gerry},
+  journal={Konferensi Nasional Sistem Informasi (KNSI) 2018},
+  year={2018}
+}
+
+@article{Setiawan_Dewanta_Nugroho_Supriyono_2019, title={Pengolah Citra Dengan Metode Thresholding Dengan Matlab R2014A}, volume={15}, url={https://jurnal.unived.ac.id/index.php/jmi/article/view/868}, DOI={10.37676/jmi.v15i2.868}, number={2}, journal={JURNAL MEDIA INFOTAMA}, author={Setiawan, Ismail and Dewanta, Wika and Nugroho, Hanung and Supriyono, Heru}, year={2019}, month={Oct.}}
+
+@article{SPEKTRUM,
+	author = {I Made Rai Putera Yasa and I Made Oka Widyantara and NMAE Dewi Wirastuti},
+	title = { PERBAIKAN KONTRAS CITRA MENGGUNAKAN TEKNIK BRIGHTNESS ADJUSTMENT UNTUK SISTEM EKSTRAKSI GARIS PANTAI},
+	journal = {Jurnal SPEKTRUM},
+	volume = {4},
+	number = {2},
+	year = {2018},
+	keywords = {},
+	issn = {2684-9186},	pages = {42--47},	doi = {10.24843/SPEKTRUM.2017.v04.i02.p06},
+	url = {https://ojs.unud.ac.id/index.php/spektrum/article/view/36411}
+}
+
+@article{mahardika2017implementasi,
+  title={Implementasi Metode Waterfall pada Proses Digitalisasi Citra Analog},
+  author={Mahardika, Fajar and Purwanto, Kabul Agus and Saputra, Dhanar Intan Surya},
+  journal={VOLT: Jurnal Ilmiah Pendidikan Teknik Elektro},
+  volume={2},
+  number={1},
+  pages={63--72},
+  year={2017}
+}
+
+@article{suryowinoto2017penggunaan,
+  title={Penggunaan Pengolahan Citra Digital dengan Algoritma Edge Detection dalam Mengidentifikasi Kerusakan Kontur Jalan},
+  author={Suryowinoto, Andy and Hamid, Abdul},
+  journal={Semin. Nas. Sains dan Teknol. Terap. V},
+  pages={149--154},
+  year={2017}
+}
+
+@article{setiawan2019pengolah,
+  title={Pengolah Citra Dengan Metode Thresholding Dengan Matlab R2014A},
+  author={Setiawan, Ismail and Dewanta, Wika and Nugroho, Hanung Adi and Supriyono, Heru},
+  journal={Jurnal Media Infotama},
+  volume={15},
+  number={2},
+  year={2019}
+}
+
 @article{kadir2013pengolahan,
   title={Pengolahan Citra Digital Dan Aplikasinya},
   author={Kadir, Abdul and Susanto, Adhi},
