--- a/include/kata-pengantar.tex
+++ b/include/kata-pengantar.tex
@@ -1,7 +1,7 @@
 \addcontentsline{toc}{chapter}{KATA PENGANTAR}
 \chapter*{KATA PENGANTAR}
 
-Puji syukur kehadirat Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga penulis dapat menyelesaikan proposal tugas akhir yang berjudul ``\textbf{Media Pembelajaran Pengolahan Citra Digital Menggunakan Visualisasi Interaktif Berbasis Web}''. Proposal tugas akhir ini disusun sebagai salah satu langkah awal dalam menyelesaikan program studi Sarjana Teknik Informatika.
+Puji syukur kehadirat Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga penulis dapat menyelesaikan proposal tugas akhir yang berjudul ``\textbf{Media Pembelajaran Pengolahan Citra Menggunakan Visualisasi Interaktif Berbasis Web}''. Proposal tugas akhir ini disusun sebagai salah satu langkah awal dalam menyelesaikan program studi Sarjana Teknik Informatika.
 
 Penulis menyadari bahwa pembuatan media pembelajaran ini tidak mudah, karena dibutuhkan pemahaman yang cukup tentang pengolahan citra digital dan teknologi web. Namun, dengan bimbingan dan dukungan dari dosen pembimbing, penulis yakin dapat menyelesaikan tugas akhir ini dengan baik.
 
@@ -9,7 +9,7 @@ Akhir kata, penulis mengucapkan terima kasih kepada semua pihak yang telah memba
 
 \vspace{1cm}
 \begin{flushright}
-    Pekanbaru, 10 Maret 2023\\
+    Pekanbaru, 1 Juli 2024\\
     \vspace{2.5cm}
     {RAHMAT ARDIANSYAH}\\
 \end{flushright}
