--- a/notes6-backupbab1.tex
+++ b/notes6-backupbab1.tex
@@ -1,7 +1,7 @@
 \chapter{PENDAHULUAN}
 
 \section{Latar Belakang}
-Pengolahan citra digital telah menjadi bidang yang semakin penting dalam era digital ini. Dalam berbagai bidang seperti ilmu komputer, grafika komputer, pengenalan pola, penglihatan komputer, dan banyak aplikasi lainnya, pengolahan citra digital berperan penting dalam analisis, manipulasi, dan interpretasi gambar digital. Pengolahan citra digital memungkinkan identifikasi dan ekstraksi fitur pada gambar digital, yang seringkali menggunakan warna sebagai komponen utama dalam representasi objek \cite{Jumadi_Yupianti_Sartika_2021}.
+Pengolahan citra digital telah menjadi bidang yang semakin penting dalam era digital ini. Dalam berbagai bidang seperti ilmu komputer, grafika komputer, pengenalan pola, penglihatan komputer, dan banyak aplikasi lainnya, pengolahan citra digital berperan penting dalam analisis, manipulasi, dan interpretasi gambar digital.
 
 Pada saat yang sama, perkembangan teknologi informasi dan komunikasi (TIK) telah membawa dampak signifikan dalam dunia pendidikan. Pemanfaatan media pembelajaran dalam proses pendidikan telah menjadi semakin umum, dan penggunaan media berbasis web menjadi salah satu tren yang semakin populer. Media berbasis web memiliki keunggulan dalam aksesibilitas dan fleksibilitasnya yang tinggi, yang memungkinkan mahasiswa untuk mengakses dan berinteraksi dengan materi pembelajaran secara efektif.
 
@@ -9,7 +9,7 @@ Dalam konteks ini, penelitian ini bertujuan untuk mengembangkan sebuah media pem
 
 Media pembelajaran yang diusulkan akan memberikan visualisasi yang menarik dan interaktif untuk membantu pemahaman konsep-konsep dasar dalam pengolahan citra digital. Mahasiswa akan dapat berinteraksi dengan gambar dan algoritma pengolahan citra, memanipulasi parameter, dan melihat hasil transformasi citra secara langsung melalui antarmuka berbasis web yang ramah pengguna.
 
-Dengan adanya media pembelajaran ini, diharapkan siswa akan lebih terlibat dan tertarik dalam proses pembelajaran pengolahan citra digital. Selain itu, dosen juga akan mendapatkan alat yang berguna untuk mengajarkan konsep-konsep ini dengan cara yang lebih menarik dan mudah dipahami. Teknik pengolahan citra digital bertujuan untuk meningkatkan kualitas gambar agar lebih mudah diinterpretasikan, baik oleh manusia maupun oleh mesin komputer \cite{hutahaean2019teknologi}.
+Dengan adanya media pembelajaran ini, diharapkan siswa akan lebih terlibat dan tertarik dalam proses pembelajaran pengolahan citra digital. Selain itu, dosen juga akan mendapatkan alat yang berguna untuk mengajarkan konsep-konsep ini dengan cara yang lebih menarik dan mudah dipahami.
 
 Penelitian ini diharapkan dapat memberikan kontribusi dalam pengembangan media pembelajaran yang inovatif dan interaktif dalam bidang pengolahan citra digital. Dengan meningkatkan kualitas pembelajaran di bidang ini, diharapkan dapat mempersiapkan mahasiswa untuk menghadapi tantangan dan peluang di dunia yang semakin digital.
 
