--- a/notes7-backupbab2.tex
+++ b/notes7-backupbab2.tex
@@ -2,14 +2,15 @@
 \section{Tinjauan Pustaka}
 Dalam penelitian ini, beberapa referensi kepustakaan yang bersumber pada penelitian sebelumnya diambil sebagai bahan referensi. Referensi ini digunakan untuk membantu dalam menyelesaikan penelitian yang sedang dilakukan. Peneliti menggunakan referensi-referensi tersebut sebagai acuan dan sumber informasi untuk memperdalam pemahaman tentang topik yang sedang diteliti.
 
-Pada penelitian terdahulu \textcite{suryadibrata2020visualisasi} membuat visualisasi algoritma \textit{K-Means Clustering} dalam bentuk 3D menggunakan unity dan menggunakan bahasa pemrograman C\char"0023\ yang dikembangkan dalam model \textit{Waterfall}. Aplikasi visualisasi ini bertujuan untuk membantu pelajar dalam memahami algoritma \textit{K-Means Clustering}. Aplikasi dalam penelitian ini mengimplementasikan animasi dari proses perhitungan jarak antara setiap vektor data dan setiap vektor pusat yang ada menggunakan sebuah garis pembantu. Dalam proses visualisasi garis pembantu berperan untuk menunjukkan proses pencarian jarak terdekat dari setiap vektor data. Berdasarkan latar belakang bahwa banyak pelajar kesulitan memahami algoritma pembelajaran mesin karena kompleksitas matematisnya, penelitian ini menggunakan metode visualisasi algoritma untuk menjelaskan langkah-langkah K-Means Clustering secara interaktif. Hasil penelitian menunjukkan bahwa penggunaan elemen grafis seperti titik dan garis, serta animasi perubahan warna vektor data, membantu pelajar lebih mudah memahami proses pengelompokan data. Kesimpulannya, visualisasi algoritma K-Means Clustering ini dapat meningkatkan motivasi dan pemahaman pelajar terhadap materi yang kompleks.
+Pada penelitian terdahulu \textcite{suryadibrata2020visualisasi} membuat visualisasi algoritma \textit{K-Means Clustering} dalam bentuk 3D menggunakan unity dan menggunakan bahasa pemrograman C\char"0023\ yang dikembangkan dalam model \textit{Waterfall}. Aplikasi visualisasi ini bertujuan untuk membantu pelajar dalam memahami algoritma \textit{K-Means Clustering}. Aplikasi dalam penelitian ini mengimplementasikan animasi dari proses perhitungan jarak antara setiap vektor data dan setiap vektor pusat yang ada menggunakan sebuah garis pembantu. Dalam proses visualisasi garis pembantu berperan untuk menunjukkan proses pencarian jarak terdekat dari setiap vektor data.
 
-Dalam penelitian kedua yang dilakukan oleh \textcite{zarkasyi2015pengembangan}, penggunaan aplikasi GeoGebra untuk media pembelajaran bertujuan untuk memvisualisasikan penggunaan integral pada siswa SMA. Kriteria kualitas media pembelajaran mencakup aspek kualitas visual dan teknis. Penelitian ini menggunakan model pengembangan ADDIE (\textit{Analysis, Design, Development, Implementation, Evaluation}). Latar belakang masalah adalah kesulitan siswa dalam memahami konsep abstrak penggunaan integral untuk menghitung luas daerah di bawah kurva dan volume benda putar. Metode pengembangan ADDIE dimulai dengan analisis kebutuhan dan karakteristik siswa, desain media, pengembangan media dengan GeoGebra, implementasi kepada guru dan siswa, serta evaluasi kualitas produk. Hasil penelitian menunjukkan bahwa media pembelajaran yang dikembangkan efektif dan layak digunakan dengan kualitas yang baik. Kesimpulan dari penelitian ini adalah bahwa penggunaan media pembelajaran berbasis GeoGebra dapat membantu siswa memvisualisasikan konsep integral dan meningkatkan pemahaman mereka terhadap materi tersebut
+Penelitian kedua yang dilakukan oleh \textcite{zarkasyi2015pengembangan} menggunakan aplikasi GeoGebra untuk media pembelajaran dengan tujuan memvisualisasikan penggunaan integral pada siswa SMA. Adapun kriteria kualitas media pembelajaran yang meliputi aspek kualitas visual dan kualitas teknis. Dengan menggunakan media pembelajaran tersebut, diharapkan dapat meningkatkan pemahaman siswa mengenai penggunaan integral. Metode yang digunakan dalam penelitian ini menggunakan model pengembangan ADDIE (\textit{Analysis, Design, Development, Implementation, Evaluation}). Menurutnya seorang guru harus menciptakan pembelajaran yang dapat membantu siswa membayangkan atau memvisualisasikan dengan mengembangkan media pembelajaran. Dia menekankan bahwa media pembelajaran dapat menjadi perantara yang membantu siswa mengurangi keabstrakan objek matematika yang sulit dipahami.
+
+Dengan menggunakan media interaktif, pengajar dapat lebih mudah dalam proses pengajaran dan mahasiswa dapat lebih tertarik dan termotivasi untuk menumbuhkan rasa keingintahuannya, karena materi yang disampaikan dapat disertai dengan tampilan multimedia interaktif \cite{maulana2021penerapan}.
 
 Berdasarkan tinjauan pustaka yang telah disajikan, dapat disimpulkan bahwa penggunaan aplikasi visualisasi dan media pembelajaran interaktif dapat meningkatkan kualitas pembelajaran serta motivasi belajar mahasiswa. Penelitian terdahulu yang telah dilakukan oleh para peneliti sebelumnya dapat menjadi acuan dan bahan pertimbangan dalam menganalisis hasil penelitian ini. Diharapkan penelitian ini dapat memberikan sumbangsih bagi pengembangan media pembelajaran yang lebih inovatif dan efektif untuk meningkatkan kualitas pendidikan.
 
 Penelitian ini memiliki kesamaan dengan penelitian sebelumnya yaitu keduanya menggunakan aplikasi visualisasi sebagai media pembelajaran. Namun, terdapat perbedaan dimana penelitian sebelumnya memvisualisasikan K-Means Clustering dengan menggunakan bahasa pemrograman C\char"0023\ berbasis aplikasi \textit{desktop}, sedangkan penelitian ini memvisualisasikan operasi pengolahan citra digital dengan menggunakan bahasa pemrograman \textit{JavaScript} berbasis \textit{Web}.
-
 \section{Dasar Teori}
 \subsection{Pengolahan Citra Digital}
 \textcite{munantri2020aplikasi} menjelaskan bahwa citra digital adalah gambar dua dimensi yang dihasilkan dari proses sampling pada gambar analog dua dimensi yang kontinu, sehingga menjadi gambar diskrit yang dapat diolah oleh komputer. Citra digital disimpan dalam bentuk data numerik yang menunjukkan besar intensitas pada masing-masing pikselnya. Oleh karena itu, citra digital dapat diolah dengan menggunakan komputer untuk berbagai keperluan seperti pengolahan gambar, analisis citra, dan pengenalan pola.
@@ -123,11 +124,13 @@ Web sendiri terdiri dari tiga komponen utama, yaitu bahasa markup (HTML), style 
 
 \begin{enumerate}[leftmargin=1cm, itemindent=0.6cm,labelwidth=15pt, labelsep=5pt, listparindent=1cm,align=left]
 
-    \item \textit{Activity Diagram}
+	\item DFD (Data \textit{Flow Diagaram})
 
-        \textit{Activity diagram} adalah salah satu jenis diagram dalam Unified Modeling Language (UML) yang digunakan untuk memodelkan alur kerja atau proses bisnis dalam sebuah sistem. \textit{Activity diagram} menggambarkan berbagai alur kegiatan dalam sistem yang sedang dirancang, mulai dari kondisi awal setiap alur, keputusan yang mungkin diambil, hingga akhir dari kegiatan tersebut \cite{pratama2021rancang}.Diagram ini memberikan representasi visual dari aktivitas dan urutan tindakan yang terjadi dalam sebuah proses, menunjukkan bagaimana satu aktivitas mengarah ke aktivitas lainnya. Dengan kata lain, activity diagram menggambarkan aliran kontrol dari satu aktivitas ke aktivitas lain dan bagaimana berbagai kondisi dan keputusan mempengaruhi aliran ini.
+	      Dalam perancangan sistem, DFD (Data Flow Diagram) dianggap sebagai sarana yang penting untuk memberikan gambaran logika secara independen terhadap perangkat lunak, perangkat keras, struktur data, atau organisasi file. Hal ini dapat dilihat dari penggunaan DFD dalam beberapa bentuk seperti diagram konteks dan diagram level n, yang digunakan untuk menggambarkan suatu sistem dengan lebih terstruktur dan sistematis \textcite{khotijah2016perancangan}.
 
-        \textit{Activity diagram} berguna dalam menggambarkan proses yang kompleks, memperjelas logika alur kerja, dan mengidentifikasi potensi perbaikan atau optimasi. Diagram ini terdiri dari elemen-elemen seperti \textit{activity nodes} (aktivitas), \textit{control flows} (aliran kontrol), \textit{decision nodes} (simpul keputusan), dan \textit{merge nodes} (simpul penggabungan). Elemen-elemen ini memungkinkan pengembang dan pemangku kepentingan untuk memahami proses secara menyeluruh, memfasilitasi komunikasi yang efektif, dan memastikan bahwa semua aspek dari alur kerja telah dipertimbangkan.
+	      DFD terdiri dari dua jenis diagram, yaitu diagram konteks dan diagram level n. Diagram konteks digunakan untuk menggambarkan hubungan sistem dengan entitas luar yang terkait, serta aliran data yang masuk dan keluar dari sistem. Sedangkan diagram level n digunakan untuk menggambarkan detail lebih lanjut dari diagram konteks, dengan memperlihatkan proses-proses, data yang digunakan dan dihasilkan, serta interaksi antara sistem dengan entitas luar.
+
+	      Keuntungan dari penggunaan DFD adalah memudahkan dalam mengidentifikasi kebutuhan fungsional suatu sistem, mengidentifikasi kekurangan dan kelebihan sistem yang ada, serta memberikan gambaran tentang cara sistem harus dirancang dan diimplementasikan. DFD juga membantu dalam mengkomunikasikan gagasan antara para analis dan pemangku kepentingan terkait sistem yang akan dibangun.
 
 	\item Flowchart
 
