--- a/seminar-proposal.tex
+++ b/seminar-proposal.tex
@@ -5,12 +5,12 @@
 % Definisi Data Peneliti, Judul, Pembimbing dan Penguji
 %-----------------------------------------------------------
 \typedocument{proposal skripsi}
-\titleskripsi{MEDIA PEMBELAJARAN PENGOLAHAN CITRA DIGITAL MENGGUNAKAN VISUALISASI INTERAKTIF BERBASIS WEB}
+\titleskripsi{MEDIA PEMBELAJARAN PENGOLAHAN CITRA MENGGUNAKAN VISUALISASI INTERAKTIF BERBASIS WEB}
 
-\fullname{RAHMAT ARDIANSYAH}
+\fullname{RAHMAT ARDIANSYAH}  
 \npm{193510147}
 
-\yearsubmit{2023}
+\yearsubmit{2024}
 \program{Teknik Informatika}
 \faculty{Teknik}
 \university{Universitas Islam Riau}
@@ -21,50 +21,50 @@
 %===========================================================
 
 \begin{document}
-    \coverproposal
-    \pagenumbering{roman}
+\coverproposal
+\pagenumbering{roman}
 
-    %===========================================================
-    % Kata Pengantar, Daftar isi, daftar gambar, daftar tabel
-    %-----------------------------------------------------------
-    \frenchspacing
-    \input{include/kata-pengantar.tex}
-    \pagebreak
+%===========================================================
+% Kata Pengantar, Daftar isi, daftar gambar, daftar tabel
+%-----------------------------------------------------------
+\frenchspacing
+\input{include/kata-pengantar.tex}
+\pagebreak
 
-    \addcontentsline{toc}{chapter}{DAFTAR ISI}
-    \tableofcontents
-    \pagebreak
+\addcontentsline{toc}{chapter}{DAFTAR ISI}
+\tableofcontents
+\pagebreak
 
-    % \addcontentsline{toc}{chapter}{DAFTAR TABEL}
-    % \listoftables
-    % \pagebreak
+% \addcontentsline{toc}{chapter}{DAFTAR TABEL}
+% \listoftables
+% \pagebreak
 
-    \addcontentsline{toc}{chapter}{DAFTAR GAMBAR}
-    \listoffigures
-    \pagebreak
+\addcontentsline{toc}{chapter}{DAFTAR GAMBAR}
+\listoffigures
+\pagebreak
 
-    \pagenumbering{arabic}
-    %-----------------------------------------------------------
-    % End Daftar isi, daftar gambar, daftar tabel
-    %===========================================================
+\pagenumbering{arabic}
+%-----------------------------------------------------------
+% End Daftar isi, daftar gambar, daftar tabel
+%===========================================================
 
-    %===========================================================
-    % Daftar masukan untuk Bab
-    %-----------------------------------------------------------
-    \input{include/bab1.tex}
-    \input{include/bab2.tex}
-    \input{include/bab3.tex}
-    %-----------------------------------------------------------
-    % End Daftar masukan untuk Bab
-    %===========================================================
+%===========================================================
+% Daftar masukan untuk Bab
+%-----------------------------------------------------------
+\input{include/bab1.tex}
+\input{include/bab2.tex}
+\input{include/bab3.tex}
+%-----------------------------------------------------------
+% End Daftar masukan untuk Bab
+%===========================================================
 
-    %===========================================================
-    % Daftar Pustaka
-    %-----------------------------------------------------------
-    \addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
-    \printbibliography[title={DAFTAR PUSTAKA}]
-    %-----------------------------------------------------------
-    % End Daftar Pustaka
-    %===========================================================
+%===========================================================
+% Daftar Pustaka
+%-----------------------------------------------------------
+\addcontentsline{toc}{chapter}{DAFTAR PUSTAKA}
+\printbibliography[title={DAFTAR PUSTAKA}]
+%-----------------------------------------------------------
+% End Daftar Pustaka
+%===========================================================
 
 \end{document}
